--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#ff77a9</color>
-    <color name="purple_500">#ec407a</color>
-    <color name="purple_700">#b4004e</color>
+    <color name="purple_200">#ffa040</color>
+    <color name="purple_500">#ff6f00</color>
+    <color name="purple_700">#c43e00</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="button">#b4004e</color>
+    <color name="button">#ff6f00</color>
 </resources>
