--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,31 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/nightfarm"
     >
 
   <RelativeLayout
       android:id="@+id/headerBarLinearLayout"
       android:layout_width="match_parent"
-      android:layout_marginTop="50dp"
-      android:layout_height="match_parent" >
+      android:layout_height="match_parent"
+      android:layout_marginTop="60dp">
 
 
     <ImageView
         android:id="@+id/batteryImageView"
         android:layout_width="98dp"
         android:layout_height="98dp"
-        android:src="@drawable/avatar" android:layout_weight="0"
         android:layout_alignParentLeft="true"
-        />
+        android:layout_marginLeft="10dp"
+        android:layout_weight="0"
+        android:src="@drawable/avatar" />
 
     <ImageView
         android:id="@+id/exit_button"
-        android:src="@drawable/monster"
         android:layout_width="98dp"
         android:layout_height="98dp"
         android:layout_alignParentRight="true"
         android:layout_gravity="right"
-        />
+        android:layout_marginRight="10dp"
+        android:src="@drawable/monster" />
 
   </RelativeLayout>
 
@@ -38,7 +40,7 @@
       android:layout_width="150dp"
       android:layout_height="50dp"
       android:layout_centerHorizontal="true"
-      android:layout_marginTop="250dp"
+      android:layout_marginTop="380dp"
       android:gravity="center"
       android:text="Choose a Number"
       android:textColor="@color/button" />
@@ -54,6 +56,7 @@
       android:text=""
       android:textColor="@color/button" />
 
+
   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/btnShoot"
       android:layout_width="150dp"
@@ -64,5 +67,6 @@
       android:background="@drawable/roundedbutton"
       android:text="Shoot"
       android:textColor="#FFFFFF" />
+
 
 </RelativeLayout>
