--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/blue_green"
     android:layout_height="match_parent"
     >
 
@@ -23,15 +24,15 @@
 
     <TextView
         android:id="@+id/textHello"
-        android:layout_width="250dp"
-        android:textSize="20sp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/button"
-        android:gravity="center"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/lav_main"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
+        android:gravity="center"
         android:text="Hey there, Marnus here!"
+        android:textColor="@color/splash_text"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.459"
         app:layout_constraintStart_toStartOf="parent"
