--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,11 @@
     <color name="purple_200">#ffa040</color>
     <color name="purple_500">#ff6f00</color>
     <color name="purple_700">#c43e00</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_200">#FF03DAC5</color>parr
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="button">#ff6f00</color>
+    <color name="blue_green">#00b686</color>
+    <color name="splash_text">#f9fbe7</color>
 </resources>
