--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/farm"
     android:layout_height="match_parent"
     >
 
@@ -55,12 +56,7 @@
       android:text=""
       android:textColor="@color/button" />
 
-  <androidx.appcompat.widget.AppCompatImageView
-      android:layout_width="match_parent"
-      android:layout_height="600dp"
-      android:id="@+id/farm"
-      android:layout_below="@id/textMarnusNumber"
-      android:src="@drawable/farm"/>
+
 
 
   <androidx.appcompat.widget.AppCompatButton
@@ -69,7 +65,7 @@
       android:layout_height="50dp"
       android:layout_below="@id/textMarnusNumber"
       android:layout_centerHorizontal="true"
-      android:layout_marginTop="40dp"
+      android:layout_marginTop="50dp"
       android:background="@drawable/roundedbutton"
       android:text="Shoot"
       android:textColor="#FFFFFF" />
